--- a/SPA/src/style.css
+++ b/SPA/src/style.css
@@ -18,15 +18,17 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
-  margin: 0;  
+  margin: 0;
   display: flex;
   place-items: center;
-  overflow-x: auto ; /* TIRA AS ROLAGENS DA PÁGINA */
+  overflow-x: auto;
+  /* TIRA AS ROLAGENS DA PÁGINA */
 }
 
 h1 {
@@ -45,9 +47,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -62,7 +66,7 @@ button:focus-visible {
   width: 100%;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center; 
+  text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
@@ -70,13 +74,16 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
-  .fade{
+
+  .fade {
     opacity: 0.2;
   }
 }
