--- a/SPA/src/style.css
+++ b/SPA/src/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 a:hover {
-  color: #535bf2;
+  color: white;
 }
 
 body {
@@ -73,10 +73,6 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
   }
 
   button {
